css/style.css
/* ... */
.portfolio .portfolio-item-inner .portfolio-img img
{
    width: 100%;
    display: block;
}
/*Contact */
.contact-title
{
   color: var(--skin-color);
   text-align: center;
   font-size: 25px;
   margin-bottom: 20px;
}
.contact-sub-title
{
   color: var(--text-black-900);
   text-align: center;
   font-size: 15px;
   margin-bottom: 60px;
}
.contact .contact-info-item
{
   flex: 0 0 25%;
   max-width: 25%;
   text-align: center;
   margin-bottom: 60px;
}
.contact .contact-info-item .icon 
{
    display: inline-block;
}
.contact .contact-info-item .icon .fa,
.contact .contact-info-item .icon .fab
{
    font-size: 25px;
    color: var(--skin-color);
}
.contact .contact-info-item h4
{
    font-size: 18px;
    font-weight: 700;
    color: var(--text-black-900);
    text-transform: capitalize;
    margin: 15px 0 5px;
}
.contact .contact-info-item p
{
    font-size: 16px;
    line-height: 25px;
    color: var(--text-black-700);
    font-weight: 400;
}
.contact .contact-form
{
    flex: 0 0 100%;
    max-width: 100%;
}
.contact .contact-form .col-6
{
    flex: 0 0 50%;
    max-width: 50%;
}
.contact .contact-form .col-12
{
    flex: 0 0 100%;
    max-width: 100%;
}
.contact .contact-form .form-item
{
    margin-bottom: 30px;
}
.contact .contact-form .form-item .form-control
{
    width: 100%;
    height: 50px;
    border-radius: 25px;
    background: var(--bg-black-100);
    border: 1px solid var(--bg-black-50);
    padding: 10px 25px;
    font-size: 16px;
    color: var(--text-black-700);
    transition: all 0.3s ease;
}
.contact .contact-form .form-item .form-control:focus
{
    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
}
.contact .contact-form .form-item textarea.form-control
{
    height: 140px;
}
.contact .contact-form .btn
{
    height: 50px;
    padding: 0 50px;
}
@media (max-width: 1199px) {
    .section .container
    {
        padding-top: 70px;
    }
    .aside {
        left: -270px;
        transition: all 0.3s ease;
    }
    
    .main-content {
        padding-left: 0;
    }
    .aside.open
    {
        left: 0;

    }

    .aside .nav-toggler
    {
        display: flex;
        left: 30px;
    }
    .aside .nav-toggler.open
    {
        left: 300px;
    }
    .section
    {
        left: 0;
    }
    .section.open
    {
        left: 270px;
    }
    .about .about-content .personal-info .info-item p span
    {
        display: block;
        margin-left: 0;
    }
}
@media (max-width: 991px) {
    .contact .contact-info-item,
    .portfolio .portfolio-item,
    .certification-card {
      flex: 0 0 100%;
      max-width: 100%;
    }
  
    .home {
      flex-direction: column;
      align-items: center;
      text-align: center;
      margin-bottom: 20px;
    }
  
    .home .home-info {
      flex: 0 0 100%;
      max-width: 100%;
      margin-bottom: 20px;
    }
  
    .home .home-img {
      display: block;
      text-align: center;
      margin-top: 20px;
      max-width: 80%;
    }

    .home .home-img img {
      max-width: 100%;
      height: auto;
      border-radius: 10px;
      max-height: 300px;
      object-fit: cover;
    }
  
    .download-cv-button {
      display: inline-block;
      margin: 20px auto;
      padding: 12px 30px;
      font-size: 16px;
      font-weight: bold;
      color: white;
      background-color: #ff4b4b;
      border-radius: 30px;
      border: none;
      text-decoration: none;
      transition: background-color 0.3s ease;
    }
  
    .download-cv-button:hover {
      background-color: #e04141;
    }
  
    .about .about-content {
      display: flex;
      flex-direction: column;
    }
  
    .about .about-content .skills,
    .about .about-content .personal-info {
      order: 1;
      flex: 0 0 100%;
      max-width: 100%;
      margin-bottom: 30px;
    }
  
    .about .about-content .education,
    .about .about-content .internship {
      flex: 0 0 100%;
      max-width: 100%;
      margin-top: 30px;
    }
    .aside .logo {
        padding-top: 10px;
        margin-bottom: 10px;
      }
      
      .aside ul {
        margin-top: 5px;
      }
      
  }
  

  @media (max-width: 767px) {
    .home-img {
      position: relative;
      display: flex;
      justify-content: center;
      align-items: center;
      margin-top: 20px;
    }
  
    .home-img::before,
    .home-img::after {
      width: 20px !important;
      height: 20px !important;
      border-width: 2px !important;
      content: '';
      position: absolute;
      border-color: var(--skin-color);
    }
  
    .home-img::before {
      top: 0 !important;
      left: 0 !important;
      border-right: none;
      border-bottom: none;
    }
  
    .home-img::after {
      bottom: 0 !important;
      right: 0 !important;
      border-left: none;
      border-top: none;
    }
  
    .home .home-info {
      padding: 15px;
    }
  
    .certification-container {
      padding: 10px;
    }
  
    .certification-item {
      padding: 20px;
    }
  
    .contact .contact-form .col-6,
    .contact .contact-info-item,
    .portfolio .portfolio-item,
    .certification-card,
    .about .about-content .internship,
    .about .about-content .education,
    .about .about-content .personal-info {
      flex: 0 0 100%;
      max-width: 100%;
    }
  }
  

